removed unnecessary files