@@ -11,6 +11,7 @@ import org.springframework.stereotype.Service;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class EligibilityServiceImpl implements EligibilityService {
@@ -18,83 +19,135 @@ public class EligibilityServiceImpl implements EligibilityService {
     @PersistenceContext
     private EntityManager entityManager;
 
+    /**
+     * Récupère les promotions automatiques éligibles pour un client
+     * Cette méthode est utilisée pour l'attribution automatique des promotions
+     */
     @Override
     public List<Promotion> getEligiblePromotions(Client client) {
         String jpql = "SELECT p FROM Promotion p WHERE p.active = true " +
                 "AND p.statut = 'ACTIVE' " +
-                "AND p.dateDebut <= CURRENT_TIMESTAMP " +
-                "AND p.dateFin >= CURRENT_TIMESTAMP";
-        TypedQuery<Promotion> query = entityManager.createQuery(jpql, Promotion.class);
-        List<Promotion> activePromotions = query.getResultList();
+                "AND p.estAutomatique = true " + // Seulement les promos automatiques
+                "AND CURRENT_TIMESTAMP BETWEEN p.dateDebut AND p.dateFin";
 
-        return activePromotions.stream()
-                .filter(promotion -> isEligible(client, promotion))
-                .toList();
+        TypedQuery<Promotion> query = entityManager.createQuery(jpql, Promotion.class);
+        List<Promotion> promotions = query.getResultList();
+
+        return promotions.stream()
+                .filter(p -> isEligibleForBasicCriteria(client, p))
+                .collect(Collectors.toList());
     }
 
+    /**
+     * Vérifie si un client est éligible à une promotion (automatique ou manuelle)
+     * Cette méthode vérifie uniquement les critères d'éligibilité, pas le type d'activation
+     */
     @Override
     public boolean isEligible(Client client, Promotion promotion) {
-        if (client == null || promotion == null) {
+        return isEligibleForBasicCriteria(client, promotion) &&
+                isPromotionActiveAndValid(promotion);
+    }
+
+    /**
+     * Vérifie si un client est éligible à une promotion automatique
+     * Cette méthode inclut la vérification du caractère automatique
+     */
+    public boolean isEligibleForAutomaticPromotion(Client client, Promotion promotion) {
+        return isEligible(client, promotion) &&
+                promotion.isEstAutomatique();
+    }
+
+    /**
+     * Vérifie les critères d'éligibilité de base (solde, type abonnement, statut client)
+     */
+    private boolean isEligibleForBasicCriteria(Client client, Promotion promotion) {
+        // Vérifications de base
+        if (client == null || promotion == null ||
+                !"ACTIF".equalsIgnoreCase(client.getStatut())) {
             return false;
         }
 
-        // Vérifier d'abord si la promotion est active et a le bon statut
-        if (!"ACTIVE".equals(promotion.getStatut()) || !promotion.isActive()) {
-            return false;
-        }
-
-        // Vérifier le statut du client
-        if (!"ACTIF".equalsIgnoreCase(client.getStatut())) {
-            return false;
-        }
-
-        // Vérifier la période de validité
-        LocalDateTime now = LocalDateTime.now();
-        if (promotion.getDateDebut() == null || promotion.getDateFin() == null ||
-                now.isBefore(promotion.getDateDebut()) || now.isAfter(promotion.getDateFin())) {
-            return false;
-        }
-
-        // Vérifier le solde minimum
+        // Vérification solde
         if (promotion.getSoldeMinimum() != null &&
-                client.getSolde() != null &&
-                client.getSolde().compareTo(promotion.getSoldeMinimum()) < 0) {
+                (client.getSolde() == null ||
+                        client.getSolde().compareTo(promotion.getSoldeMinimum()) < 0)) {
             return false;
         }
 
-        // Vérifier le type d'abonnement
+        // Vérification type abonnement
         if (promotion.getTypeAbonnementsEligibles() != null &&
                 !promotion.getTypeAbonnementsEligibles().isEmpty() &&
-                (client.getTypeAbonnement() == null ||
-                        !promotion.getTypeAbonnementsEligibles().contains(client.getTypeAbonnement()))) {
+                !promotion.getTypeAbonnementsEligibles().contains(client.getTypeAbonnement())) {
             return false;
         }
 
         return true;
     }
 
+    /**
+     * Vérifie si la promotion est active et dans sa période de validité
+     */
+    private boolean isPromotionActiveAndValid(Promotion promotion) {
+        if (promotion == null) {
+            return false;
+        }
+
+        // Vérification statut et activation
+        if (!"ACTIVE".equalsIgnoreCase(promotion.getStatut()) || !promotion.isActive()) {
+            return false;
+        }
+
+        // Vérification période de validité
+        LocalDateTime now = LocalDateTime.now();
+        if (promotion.getDateDebut() == null || promotion.getDateFin() == null ||
+                now.isBefore(promotion.getDateDebut()) || now.isAfter(promotion.getDateFin())) {
+            return false;
+        }
+
+        return true;
+    }
+
+    /**
+     * Vérifie l'éligibilité avec diagnostic détaillé
+     * @param client Le client à vérifier
+     * @param promotion La promotion à vérifier
+     */
     @Override
     public EligibilityResult checkEligibilityDetailed(Client client, Promotion promotion) {
+        return checkEligibilityDetailed(client, promotion, false);
+    }
+
+    /**
+     * Vérifie l'éligibilité avec diagnostic détaillé
+     * @param client Le client à vérifier
+     * @param promotion La promotion à vérifier
+     * @param forAutomaticAssignment Si true, vérifie aussi que la promotion est automatique
+     */
+    public EligibilityResult checkEligibilityDetailed(Client client, Promotion promotion, boolean forAutomaticAssignment) {
         List<String> failedCriteria = new ArrayList<>();
         List<String> reasons = new ArrayList<>();
 
+        // Vérification client
         if (client == null) {
             failedCriteria.add("client");
             reasons.add("Client introuvable.");
             return new EligibilityResult(false, failedCriteria, reasons);
         }
 
+        // Vérification promotion
         if (promotion == null) {
             failedCriteria.add("promotion");
             reasons.add("Promotion introuvable.");
             return new EligibilityResult(false, failedCriteria, reasons);
         }
 
+        // Vérification statut client
         if (!"ACTIF".equalsIgnoreCase(client.getStatut())) {
             failedCriteria.add("statut_client");
             reasons.add("Le statut du client n'est pas ACTIF.");
         }
 
+        // Vérification période de validité
         LocalDateTime now = LocalDateTime.now();
         if (promotion.getDateDebut() == null || promotion.getDateFin() == null ||
                 now.isBefore(promotion.getDateDebut()) || now.isAfter(promotion.getDateFin())) {
@@ -102,6 +155,7 @@ public class EligibilityServiceImpl implements EligibilityService {
             reasons.add("La promotion n'est pas valide à cette date.");
         }
 
+        // Vérification solde minimum
         if (promotion.getSoldeMinimum() != null &&
                 client.getSolde() != null &&
                 client.getSolde().compareTo(promotion.getSoldeMinimum()) < 0) {
@@ -109,6 +163,7 @@ public class EligibilityServiceImpl implements EligibilityService {
             reasons.add("Le solde du client est insuffisant.");
         }
 
+        // Vérification type d'abonnement
         if (promotion.getTypeAbonnementsEligibles() != null &&
                 !promotion.getTypeAbonnementsEligibles().isEmpty() &&
                 (client.getTypeAbonnement() == null ||
@@ -117,19 +172,26 @@ public class EligibilityServiceImpl implements EligibilityService {
             reasons.add("Le type d'abonnement du client n'est pas éligible.");
         }
 
-        if (!"ACTIF".equalsIgnoreCase(promotion.getStatut()) || !promotion.isActive()) {
+        // Vérification statut promotion
+        if (!"ACTIVE".equalsIgnoreCase(promotion.getStatut()) || !promotion.isActive()) {
             failedCriteria.add("statut_promotion");
             reasons.add("La promotion est désactivée.");
         }
 
-        if (!promotion.isEstAutomatique()) {
+        // Vérification caractère automatique (seulement si demandé)
+        if (forAutomaticAssignment && !promotion.isEstAutomatique()) {
             failedCriteria.add("est_automatique");
-            reasons.add("La promotion nécessite un code manuel.");
+            reasons.add("La promotion nécessite une activation manuelle.");
         }
 
         boolean eligible = failedCriteria.isEmpty();
         return new EligibilityResult(eligible, failedCriteria, reasons);
     }
 
-
+    /**
+     * Vérifie l'éligibilité pour une promotion automatique avec diagnostic détaillé
+     */
+    public EligibilityResult checkEligibilityForAutomaticPromotion(Client client, Promotion promotion) {
+        return checkEligibilityDetailed(client, promotion, true);
+    }
 }
